// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseBanner audit access expired, can upgrade snapshot: (auditAccessExpired, upgradeToAccess) 1`] = `
<Fragment>
  <Banner>
    Your audit access to this course has expired.
      
    Upgrade now to access your course again.
  </Banner>
</Fragment>
`;

exports[`CourseBanner audit access expired, cannot upgrade snapshot: (auditAccessExpired, findAnotherCourse hyperlink) 1`] = `
<Fragment>
  <Banner>
    Your audit access to this course has expired.
      
    <Hyperlink
      destination=""
    >
      Find another course
    </Hyperlink>
  </Banner>
</Fragment>
`;

exports[`CourseBanner course run active and cannot upgrade snapshot: (upgradseDeadlinePassed, exploreCourseDetails hyperlink) 1`] = `
<Fragment>
  <Banner>
    Your upgrade deadline for this course has passed.  To upgrade, enroll in a session that is farther in the future.
      
    <Hyperlink
      destination="test-course-website"
    >
      Explore course details.
    </Hyperlink>
  </Banner>
</Fragment>
`;
